# kibo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.parser  GUIDELINES.md  LICENSE.md  README.md  compose.yaml  maintainers.yaml  run.sh
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
app-html/: _oklch.js  index.html  manifest.webmanifest  script.js  styles.css  tsconfig.json
app-html/types/: self.d.ts
app/public/: manifest.webmanifest
app/src/: env.ts  index.tsx  styles.css
assets/: infrastructure.excalidraw
biter/: Cargo.toml  README.md
biter/src/: blk_index_to_blk_recap.rs  blk_metadata.rs  lib.rs  main.rs  utils.rs
crates/biter/: Cargo.toml  LICENSE.md  README.md
crates/iterable/: README.md
crates/iterable/struct_iterable_derive/: Cargo.toml
crates/snkrj/: Cargo.toml  LICENSE.md
docker/: Dockerfile  build.sh  cmd.sh  run.sh
iterable/: Cargo.toml
iterable/struct_iterable_derive/: README.md
iterable/struct_iterable_derive/src/: lib.rs
iterable/struct_iterable_internal/: Cargo.toml
parser/: .gitignore  Cargo.toml  README.md  node.args  reset.sh  run.sh  samply.sh  stop.sh
parser/src/: lib.rs  main.rs
parser/src/actions/: export.rs  iter_blocks.rs  min_height.rs  mod.rs  parse.rs
parser/src/bitcoin/: consts.rs  daemon.rs  height.rs  mod.rs
parser/src/bitcoin/addresses/: mod.rs  multisig.rs
parser/src/bitcoin/db/: blk_files.rs  block_iter.rs  blocks_indexes.rs  errors.rs  mod.rs  reader.rs  txdb.rs
parser/src/databases/: _database.rs  _database_heed.rs  _trait.rs  address_index_to_address_data.rs  address_index_to_empty_address_data.rs  address_to_address_index.rs  metadata.rs  mod.rs  txid_to_tx_data.rs  txout_index_to_address_index.rs  txout_index_to_amount.rs
parser/src/datasets/: block_metadata.rs  coindays.rs  cointime.rs  constant.rs  date_metadata.rs  mining.rs  mod.rs  price.rs  transaction.rs
parser/src/datasets/_traits/: any_dataset.rs  min_initial_state.rs
parser/src/datasets/address/: all_metadata.rs  cohort.rs  cohort_metadata.rs  mod.rs
parser/src/datasets/price/: mod.rs  ohlc.rs
parser/src/datasets/subs/: capitalization.rs  input.rs  mod.rs  output.rs  price_paid.rs  ratio.rs  realized.rs  recap.rs  supply.rs  unrealized.rs  utxo.rs
parser/src/datasets/utxo/: dataset.rs  mod.rs
parser/src/io/: binary.rs  consts.rs  json.rs  mod.rs  path.rs  serialization.rs
parser/src/price/: binance.rs  kibo.rs  kraken.rs  mod.rs  satonomics.rs
parser/src/states/: _trait.rs  counters.rs  date_data_vec.rs  mod.rs
parser/src/states/cohorts_states/address/: cohort_durable_states.rs  cohort_id.rs  cohorts_durable_states.rs  cohorts_input_states.rs  cohorts_one_shot_states.rs  cohorts_output_states.rs  cohorts_realized_states.rs  mod.rs  split_by_address_cohort.rs
parser/src/states/cohorts_states/any/: capitalization_state.rs  durable_states.rs  input_state.rs  output_state.rs  price_paid_state.rs  price_to_value.rs  realized_state.rs  supply_state.rs  unrealized_state.rs  utxo_state.rs
parser/src/states/cohorts_states/utxo/: cohort_durable_states.rs  cohort_filter.rs  cohort_filters.rs  cohort_id.rs  cohorts_durable_states.rs  cohorts_one_shot_states.rs  cohorts_sent_states.rs  split_by_utxo_cohort.rs
parser/src/structs/: address.rs  address_data.rs  address_liquidity.rs  address_realized_data.rs  address_size.rs  address_split.rs  address_type.rs  amount.rs  any_map.rs  array.rs  bi_map.rs  block_data.rs  block_path.rs  config.rs  counter.rs  date.rs  date_data.rs  date_map copy.rs  date_map.rs  date_map_chunk_id.rs  empty_address_data.rs  exit.rs  generic_map.rs  height.rs  height_map copy.rs  height_map.rs  height_map_chunk_id.rs  liquidity.rs  map_value.rs  mod.rs  partial_txout_data.rs  price.rs  ram.rs  sent_data.rs  serialized_btreemap.rs  serialized_vec.rs  timestamp.rs  tx_data.rs  txout_index.rs  wamount.rs  (+1 more)
parser/src/utils/: arr.rs  bytes.rs  date.rs  flamegraph.rs  log.rs  lossy.rs  mod.rs  multisig.rs  percentile.rs  retry.rs  rpc.rs  time.rs
server/: .gitignore  Cargo.toml  README.md  restart-cloudflared.sh  run.sh
server/src/: chunk.rs  handler.rs  header_map.rs  headers.rs  imports.rs  kind.rs  main.rs  response.rs  routes.rs
server/src/api/: mod.rs
server/src/api/handlers/: dataset.rs  extension.rs  fallback.rs  mod.rs  response.rs
server/src/api/structs/: mod.rs  paths.rs  routes.rs
server/src/website/: mod.rs
server/src/website/handlers/: _minify.rs  file.rs  mod.rs
server/src/website/handlers/minify/: mod.rs
src/: main.rs
src/crates/biter/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
src/crates/biter/src/: blk_index_to_blk_recap.rs  blk_recap.rs  lib.rs  main.rs  utils.rs
src/crates/snkrj/: Cargo.toml  README.md
src/crates/snkrj/src/: lib.rs  main.rs
src/io/: json.rs  mod.rs  serialization.rs
src/parser/: mod.rs
src/server/: header_map.rs  mod.rs
src/structs/: address.rs  address_data.rs  address_realized_data.rs  address_type.rs  amount.rs  any_map.rs  array.rs  bi_map.rs  block_data.rs  block_path.rs  config.rs  counter.rs  date.rs  date_data.rs  date_map.rs  date_map_chunk_id.rs  empty_address_data.rs  epoch.rs  exit.rs  generic_map.rs  height.rs  height_map.rs  height_map_chunk_id.rs  instant.rs  map_path.rs  map_value.rs  mod.rs  partial_txout_data.rs  ram.rs  rpc.rs  sent_data.rs  serialized_btreemap.rs  serialized_vec.rs  timestamp.rs  tx_data.rs  txout_index.rs
src/utils/: consts.rs  flamegraph.rs  log.rs  mod.rs  retry.rs  rpc.rs  time.rs
src/website/: index.html  manifest.webmanifest  tsconfig.json
website/: generate-icons.sh  index.html  jsconfig.json  manifest.webmanifest  script.js  service-worker.js  tsconfig.json
website/assets/: index.html
website/misc/: tailwindTo550.js
website/scripts/: chart.js  dashboard.js  live-price.js  main.js  moscow-time.js  options.js  service-worker.js  simulation.js
website/styles/: chart.css  dashboard.css  live-price.css  simulation.css
website/types/: paths.d.ts  self.d.ts
(+306 files in other folders)
