[package]
name = "kibo_money"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.3"
axum = "0.7.9"
bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
    "serde",
] }
bitcoin_hashes = { version = "0.15.0" }
biter = { path = "./src/crates/biter" }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_deref = "1.1.1"
env_logger = "0.11.5"
inferno = "0.12.0"
itertools = "0.13.0"
log = { version = "0.4.22", features = ["std", "serde"] }
ordered-float = "4.5.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rlimit = "0.10.2"
snkrj = { path = "./src/crates/snkrj" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
struct_iterable = { path = "./src/crates/iterable" }
swc = "9.0.0"
swc_common = "5.0.0"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["compression-full"] }
zstd = "0.13.2"
