[package]
name = "parser"
description = "A better, FOSS, Bitcoin-only, self-hostable Glassnode"
homepage = "https://satonomics.xyz"
version = "0.3.0"
repository = "https://github.com/satonomics-org/satonomics"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.3"
bincode = { git = "https://github.com/bincode-org/bincode.git" }
biter = "0.1.0"
bitcoin_hashes = { version = "0.14.0" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
color-eyre = "0.6.3"
derive_deref = "1.1.1"
inferno = "0.11.21"
itertools = "0.13.0"
memory-stats = "1.2.0"
ordered-float = "4.2.2"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
sanakirja = "1.4.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
zstd = "0.13.2"
heed = "0.20.3"
