[package]
name = "parser"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.3"
bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
    "serde",
] }
bitcoin_hashes = { version = "0.14.0" }
biter = { path = "../biter" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_deref = "1.1.1"
inferno = "0.11.21"
itertools = "0.13.0"
ordered-float = "4.3.0"
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
sanakirja = "1.4.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
struct_iterable = { path = "../iterable" }
toml = "0.8.19"
zstd = "0.13.2"
# memory-stats = "1.2.0"
# sysinfo = "0.32.0"
