[package]
name = "server"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bincode = { git = "https://github.com/bincode-org/bincode.git" }
chrono = "0.4.38"
color-eyre = "0.6.3"
derive_deref = "1.1.1"
itertools = "0.13.0"
parser = { path = "../parser" }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
swc = "0.289.1"
swc_common = "0.40.1"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["compression-full"] }
# oxc = { version = "0.34.0", features = ["codegen", "minifier"] }
