[package]
name = "snkrj"
description = "A simple wrapper around Sanakirja aatabase that acts as a very fast on disk BTreeMap"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kibo-money/kibo/tree/main/crates/snkrj"
keywords = ["database", "sanakirja", "btreemap"]
categories = ["database"]
edition = "2021"

[dependencies]
sanakirja = "1.4.3"
