[package]
name = "snkrj"
description = "A simple wrapper around Sanakirja's database that acts as a very fast on disk BTreeMap"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/kibo-money/kibo/tree/main/src/crates/snkrj"
keywords = ["database", "sanakirja", "btreemap"]
categories = ["database"]
edition = "2021"

[dependencies]
sanakirja = "1.4.3"
